welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: not found: value temps
  if (isSummer==false && (temps>=60 && temp<=90)){
                          ^squirrelPlay:5: error: not found: value temps
  if (isSummer==true && (temps>=60 && temp<=100)){
                         ^