welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if (isSummer==false && (temps>=60 && temp<=90)){
    return true
  }
  if (isSummer==true && (temps>=60 && temp<=100)){
    return true
  }
  return false
}